<resources>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="login_titel">Login</string>
    <string name="login">Login enter\n</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="register_titel">Register</string>
    <string name="register_Button">Register</string>
    <string name="logout">Logout</string>
    <string name="reset_password">Reset Password</string>
    <string name="create_animal">Create Animal</string>
    <string name="enclosure">Enclosure</string>
    <string name="create_animal_button">Create Animal</string>
    <string name="info_new_animal">Info</string>
    <string name="name_new_animal">Name</string>
    <string name="add_event">Add Event</string>
    <string name="new_event_name">Name</string>
    <string name="new_event_info">Info</string>
    <string name="new_event_date">Date</string>
    <string name="add_event_button">Add Event</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_name">Event Name</string>
    <string name="datum_item">Datum</string>
</resources>